--- a/index.html
+++ b/index.html
@@ -16,56 +16,14 @@
         <input id="search" placeholder="San Francisco, California"/>
       </div>
       <div class="row">
-        <div class="weather">
-          <p>Location</p>
-          <p>69 Partially Cloudy</p>
-          <p>High 420</p>
-          <p>Low 69</p>
+        <div>
+          <p id="location"></p>
+          <p id="description"></p>
+          <p id="temp"></p>
         </div>
-<!--         
-        <div class="cloud">
-          <div class="rain">
-            <div class="drop d1"></div>
-            <div class="drop d2"></div>
-            <div class="drop d3"></div>
-            <div class="drop d4"></div>
-            <div class="drop d5"></div>
-            <div class="drop d6"></div>
-            <div class="drop d7"></div>
-            <div class="drop d8"></div>
-            <div class="drop d9"></div>
-            <div class="drop d10"></div>
-            <div class="drop d11"></div>
-            <div class="drop d12"></div>
-            <div class="drop d13"></div>
-            <div class="drop d14"></div>
-            <div class="drop d15"></div>
-          </div>
+        <div class="icon-wrapper">
+
         </div>
-        <div class="sun"></div>
-        <div class="cloud">
-          <div class="snow">
-            <div class="drop d1"></div>
-            <div class="drop d2"></div>
-            <div class="drop d3"></div>
-            <div class="drop d4"></div>
-            <div class="drop d5"></div>
-            <div class="drop d6"></div>
-            <div class="drop d7"></div>
-            <div class="drop d8"></div>
-            <div class="drop d9"></div>
-            <div class="drop d10"></div>
-            <div class="drop d11"></div>
-            <div class="drop d12"></div>
-            <div class="drop d13"></div>
-            <div class="drop d14"></div>
-            <div class="drop d15"></div>
-          </div>
-        </div>
-        <div class="moon"></div>
-        <div class="wind-wrapper">
-          <div class="wind cloud"></div>
-        </div> -->
       </div>
       
     </div>
